<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorIcons"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:hint="@string/login_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/buttonRegister"
            style="@style/BtnStyleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login_register"
            app:layout_constraintEnd_toStartOf="@+id/buttonSave"
            app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <Button
            android:id="@+id/buttonSave"
            style="@style/BtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/login_sign_up"
            android:textColor="@color/colorIcons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <EditText
            android:id="@+id/textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vaccine_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>