<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_tela_add_vaccine"
        tools:context=".activity.TelaAddVaccineActivity">

    <ImageView
            android:id="@+id/fundo_vaccine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/banner_fundo" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itextLayoutNameVaccine"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewVaccine">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textLayoutNameVaccine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_vaccine_name"
                android:inputType="textCapSentences"
                android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itextLayoutDateApplication"
            android:layout_width="0dp"
            android:layout_height="56dp"
            style="@style/TextInputLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/title_date_app"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/imageViewVaccine"
            app:layout_constraintTop_toBottomOf="@+id/itextLayoutNameVaccine">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textLayoutDateApplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itextLayoutDateReapplication"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/title_date_reapp"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/imageViewVaccine"
            app:layout_constraintTop_toBottomOf="@+id/itextLayoutDateApplication">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textLayoutDateReapplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewVaccine"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[5]" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewVaccine"
            app:layout_constraintTop_toBottomOf="@+id/itextLayoutDateReapplication">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textLayoutNameVet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_veterinary"
                android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>